salesforce/force-app/main/default/objects/Contact/fields/Console_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Console_Account_ID__c</fullName>
    <description>The stable OpenCode Console user ID. Identifies the person, not their workspace.</description>
    <externalId>true</externalId>
    <label>Console Account ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>