salesforce/force-app/main/default/objects/Contact/fields/Console_Signup_Date__c.field-meta.xml
<CustomField>
    <fullName>Console_Signup_Date__c</fullName>
    <description>Creation time of the verified Console account, in UTC.</description>
    <label>Console Signup Date</label>
    <type>DateTime</type>
</CustomField>