salesforce/force-app/main/default/objects/Contact/fields/Has_Console_Account__c.field-meta.xml
<CustomField>
    <fullName>Has_Console_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True when this person has a verified OpenCode Console account. Existing records are not backfilled.</description>
    <label>Has Console Account</label>
    <type>Checkbox</type>
</CustomField>